--- a/pages/19005.html
+++ b/pages/19005.html
@@ -695,20 +695,26 @@ margin-left: 0em;
 <ul>
 <li id="SeibergWitten94"><a class="existingWikiWord" href="/nlab/show/Nathan+Seiberg">Nathan Seiberg</a>, <a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <em>Monopoles, Duality and Chiral Symmetry Breaking in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">N=2</annotation></semantics></math> Supersymmetric QCD</em> (<a href="http://arxiv.org/abs/hep-th/9408099">arXiv:hep-th/9408099</a>)</li>
 </ul>
+
+<p>Quick exposition of the basic idea includes</p>
+
+<ul>
+<li id="Albertsson03">Cecilia Albertsson, around p. 31 of <em>Superconformal D-branes and moduli spaces</em> (<a href="http://arxiv.org/abs/hep-th/0305188">arXiv:hep-th/0305188</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September 22, 2018 at 04:50:06.
+  Last revised on October 26, 2018 at 08:06:02.
   See the <a href="https://ncatlab.org/nlab/history/Higgs branch" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Higgs+branch" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Higgs+branch/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Higgs+branch" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Higgs+branch" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Higgs+branch" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Higgs+branch/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Higgs+branch" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Higgs+branch" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Higgs branch/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
