--- a/pages/6468.html
+++ b/pages/6468.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -390,7 +390,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>A cyclic cover <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℙ</mi> <mn>2</mn></msup></mrow><annotation encoding="application/x-tex">\mathbb{P}^2</annotation></semantics></math> branched over a curve of degree <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>6</mn></mrow><annotation encoding="application/x-tex">6</annotation></semantics></math></p>
+<p>A cyclic cover of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>ℙ</mi> <mn>2</mn></msup></mrow><annotation encoding="application/x-tex">\mathbb{P}^2</annotation></semantics></math> branched over a curve of degree <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>6</mn></mrow><annotation encoding="application/x-tex">6</annotation></semantics></math>.</p>
 </li>
 
 <li>
@@ -473,7 +473,7 @@ margin-left: 0em;
 </li>
 
 <li id="Weil79">
-<p><a class="existingWikiWord" href="/nlab/show/Andre+Weil">Andre Weil</a>, Final report on contract AF 18 (603)-57. In Scientic works. Collected papers. Vol. II (1951-1964). 1979.</p>
+<p><a class="existingWikiWord" href="/nlab/show/Andre+Weil">Andre Weil</a>, Final report on contract AF 18 (603)-57. In Scientific works. Collected papers. Vol. II (1951-1964). 1979.</p>
 </li>
 </ul>
 
@@ -505,11 +505,27 @@ margin-left: 0em;
 
 <h3 id="InStringTheory">In string theory</h3>
 
-<p>In <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a>:</p>
+<p>In <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a>, the <a class="existingWikiWord" href="/nlab/show/KK-compactification">KK-compactification</a> of <a class="existingWikiWord" href="/nlab/show/type+IIA+string+theory">type IIA string theory</a>/<a class="existingWikiWord" href="/nlab/show/M-theory">M-theory</a>/<a class="existingWikiWord" href="/nlab/show/F-theory">F-theory</a> on K3-<a class="existingWikiWord" href="/nlab/show/fibers">fibers</a> is supposed to exhibit te <a class="existingWikiWord" href="/nlab/show/duality+between+M%2FF-theory+and+heterotic+string+theory">duality between M/F-theory and heterotic string theory</a>, originally due to</p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Chris+Hull">Chris Hull</a>, <a class="existingWikiWord" href="/nlab/show/Paul+Townsend">Paul Townsend</a>, section 6 of <em>Unity of Superstring Dualities</em>, Nucl.Phys.B438:109-137,1995 (<a href="http://arxiv.org/abs/hep-th/9410167">arXiv:hep-th/9410167</a>)</p>
+</li>
+
+<li id="Witten95">
+<p><a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, section 4 of <em><a class="existingWikiWord" href="/nlab/show/String+Theory+Dynamics+In+Various+Dimensions">String Theory Dynamics In Various Dimensions</a></em>, Nucl.Phys.B443:85-126,1995 (<a href="http://arxiv.org/abs/hep-th/9503124">arXiv:hep-th/9503124</a>)</p>
+</li>
+</ul>
+
+<p>For review and further discussion see also</p>
 
 <ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Paul+Aspinwall">Paul Aspinwall</a>, <a class="existingWikiWord" href="/nlab/show/David+Morrison">David Morrison</a>, <em>String Theory on K3 Surfaces</em>, in <a class="existingWikiWord" href="/nlab/show/Brian+Greene">Brian Greene</a>, <a class="existingWikiWord" href="/nlab/show/Shing-Tung+Yau">Shing-Tung Yau</a> (eds.), <em>Mirror Symmetry II</em>, International Press, Cambridge, 1997, pp. 703-716 (<a href="https://arxiv.org/abs/hep-th/9404151">arXiv:hep-th/9404151</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Paul+Aspinwall">Paul Aspinwall</a>, <em>Enhanced Gauge Symmetries and K3 Surfaces</em>, Phys.Lett. B357 (1995) 329-334 (<a href="http://arxiv.org/abs/hep-th/9507012">arXiv:hep-th/9507012</a>)</p>
 </li>
 
 <li id="Aspinwall96">
@@ -534,14 +550,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 26, 2018 at 06:20:53.
+  Last revised on October 26, 2018 at 08:48:15.
   See the <a href="https://ncatlab.org/nlab/history/K3 surface" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/K3+surface" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/K3+surface/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/K3+surface" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/K3+surface" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/K3+surface" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/K3+surface/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/K3+surface" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/K3+surface" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/K3 surface/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
