--- a/pages/7343.html
+++ b/pages/7343.html
@@ -1166,6 +1166,10 @@ margin-left: 0em;
 <li id="Albertsson03">
 <p>Cecilia Albertsson, <em>Superconformal D-branes and moduli spaces</em> (<a href="http://arxiv.org/abs/hep-th/0305188">arXiv:hep-th/0305188</a>)</p>
 </li>
+
+<li>
+<p><span class="newWikiWord">Yang-Hui He<a href="/nlab/new/Yang-Hui+He">?</a></span>, <em>Lectures on D-branes, Gauge Theories and Calabi-Yau Singularities</em>, International Summer School in Mathematical Physics (<a href="https://arxiv.org/abs/hep-th/0408142">arXiv:hep-th/0408142</a>)</p>
+</li>
 </ul>
 
 <p>For references on <a class="existingWikiWord" href="/nlab/show/wall+crossing">wall crossing</a> of <a class="existingWikiWord" href="/nlab/show/BPS+states">BPS states</a> see the references given there.</p>
@@ -1257,14 +1261,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 22, 2018 at 04:43:41.
+  Last revised on October 26, 2018 at 08:01:24.
   See the <a href="https://ncatlab.org/nlab/history/N=2 D=4 super Yang-Mills theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/N%3D2+D%3D4+super+Yang-Mills+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/N%3D2+D%3D4+super+Yang-Mills+theory/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/N%3D2+D%3D4+super+Yang-Mills+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/N%3D2+D%3D4+super+Yang-Mills+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/N%3D2+D%3D4+super+Yang-Mills+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/N%3D2+D%3D4+super+Yang-Mills+theory/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/N%3D2+D%3D4+super+Yang-Mills+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/N%3D2+D%3D4+super+Yang-Mills+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/N=2 D=4 super Yang-Mills theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
