--- a/pages/16774.html
+++ b/pages/16774.html
@@ -560,12 +560,16 @@ margin-left: 0em;
 
 <p>Hence the <a class="existingWikiWord" href="/nlab/show/order+of+a+group">order</a> of the full icosahedral group is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>60</mn><mo>×</mo><mn>2</mn><mo>=</mo><mn>120</mn></mrow><annotation encoding="application/x-tex"> 60 \times 2 = 120 </annotation></semantics></math>, as is that of the binary icosahedral group <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>I</mi></mrow><annotation encoding="application/x-tex">2 I</annotation></semantics></math>.</p>
 
+<div class="num_prop" id="IsomorphismToSL25">
+<h6 id="proposition">Proposition</h6>
+
 <p>There is an exceptional <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphism</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>I</mi><mo>≃</mo><msub><mi>PSL</mi> <mn>2</mn></msub><mo stretchy="false">(</mo><msub><mi>𝔽</mi> <mn>5</mn></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">I \simeq PSL_2(\mathbb{F}_5)</annotation></semantics></math>, with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>I</mi><mo>≃</mo><msub><mi>SL</mi> <mn>2</mn></msub><mo stretchy="false">(</mo><msub><mi>𝔽</mi> <mn>5</mn></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">2I \simeq SL_2(\mathbb{F}_5)</annotation></semantics></math> covering this isomorphism.</p>
+</div>
 
 <p>(<math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>PSL</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">PSL_2</annotation></semantics></math> the <a class="existingWikiWord" href="/nlab/show/projective+special+linear+group">projective special linear group</a>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>SL</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">SL_2</annotation></semantics></math> the <a class="existingWikiWord" href="/nlab/show/special+linear+group">special linear group</a>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>5</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{F}_5</annotation></semantics></math> the <a class="existingWikiWord" href="/nlab/show/prime+field">prime field</a> for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi><mo>=</mo><mn>5</mn></mrow><annotation encoding="application/x-tex">p = 5</annotation></semantics></math>)</p>
 
 <div class="num_prop" id="2IIsPerfect">
-<h6 id="proposition">Proposition</h6>
+<h6 id="proposition_2">Proposition</h6>
 
 <p>The <a class="existingWikiWord" href="/nlab/show/binary+icosahedral+group">binary icosahedral group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>I</mi></mrow><annotation encoding="application/x-tex">2I</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/perfect+group">perfect group</a>: its <a class="existingWikiWord" href="/nlab/show/abelianization">abelianization</a> is the <a class="existingWikiWord" href="/nlab/show/trivial+group">trivial group</a>.</p>
 
@@ -573,7 +577,7 @@ margin-left: 0em;
 </div>
 
 <div class="num_prop" id="QuaternionSubgroup">
-<h6 id="proposition_2">Proposition</h6>
+<h6 id="proposition_3">Proposition</h6>
 
 <p><strong>(<a class="existingWikiWord" href="/nlab/show/quaternion+group">quaternion group</a> inside <a class="existingWikiWord" href="/nlab/show/binary+icosahedral+group">binary icosahedral group</a>)</strong></p>
 
@@ -589,7 +593,7 @@ margin-left: 0em;
 <p>See <a href="quaternion+group#InclusionInLargerFininteSubgroupsOfSU2">this Prop</a> at <em><a class="existingWikiWord" href="/nlab/show/quaternion+group">quaternion group</a></em>.</p>
 
 <div class="num_prop" id="NormalSubgroupsOf2I">
-<h6 id="proposition_3">Proposition</h6>
+<h6 id="proposition_4">Proposition</h6>
 
 <p><strong>(<a class="existingWikiWord" href="/nlab/show/normal+subgroups">normal subgroups</a> of <a class="existingWikiWord" href="/nlab/show/binary+icosahedral+group">binary icosahedral group</a></strong></p>
 
@@ -663,14 +667,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 27, 2018 at 10:37:04.
+  Last revised on October 27, 2018 at 13:39:31.
   See the <a href="https://ncatlab.org/nlab/history/icosahedral group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/icosahedral+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/icosahedral+group/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/icosahedral+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/icosahedral+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/icosahedral+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/icosahedral+group/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/icosahedral+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/icosahedral+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/icosahedral group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
