--- a/pages/3522.html
+++ b/pages/3522.html
@@ -667,6 +667,10 @@ margin-left: 0em;
 <ul>
 <li><a href='#toposes_of_polynomial_functors'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>∞</mn></mrow><annotation encoding="application/x-tex">\infty</annotation></semantics></math>-Toposes of polynomial <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(\infty, 1)</annotation></semantics></math>-functors</a></li>
 </ul>
+<li><a href='#examples'>Examples</a></li>
+<ul>
+<li><a href='#goodwillie_derivatives_of_the_identity_functor'>Goodwillie derivatives of the identity functor</a></li>
+</ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
@@ -916,6 +920,14 @@ e^{x - 1} \cdot e^{-\frac{(x - 1)^2}{2}} \cdot e^{\frac{(x - 1)^3}{3}} \ldots = 
 
 <p>due to ( <a href="#Joyal08">Joyal 08, 35.5</a>, with <a class="existingWikiWord" href="/nlab/show/Georg+Biedermann">Georg Biedermann</a>) See also at <em><a class="existingWikiWord" href="/nlab/show/tangent+%28infinity%2C1%29-category">tangent (infinity,1)-category</a></em>, and <a class="existingWikiWord" href="/nlab/show/Charles+Rezk">Charles Rezk</a>, appears as (<a href="#HigherAlg">Lurie, remark 6.1.1.11</a>).</p>
 
+<h2 id="examples">Examples</h2>
+
+<h3 id="goodwillie_derivatives_of_the_identity_functor">Goodwillie derivatives of the identity functor</h3>
+
+<p>The Goodwillie derivatives of the <a class="existingWikiWord" href="/nlab/show/identity+functor">identity functor</a> on <a class="existingWikiWord" href="/nlab/show/pointed+topological+spaces">pointed topological spaces</a>, form an <a class="existingWikiWord" href="/nlab/show/operad">operad</a> in <a class="existingWikiWord" href="/nlab/show/spectra">spectra</a> (<a href="#Ching05">Ching 05</a>).</p>
+
+<p>See at <em><a class="existingWikiWord" href="/nlab/show/Goodwillie+derivatives+of+the+identity+functor">Goodwillie derivatives of the identity functor</a></em></p>
+
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
@@ -1016,7 +1028,7 @@ e^{x - 1} \cdot e^{-\frac{(x - 1)^2}{2}} \cdot e^{\frac{(x - 1)^3}{3}} \ldots = 
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Gregory+Arone">Gregory Arone</a> and Michael Ching, <em>Operads And Chain Rules For The Calculus Of Functors</em>, <a href="http://www.math.uga.edu/~mching/Work/chain-rule-spaces-final.pdf">preprint</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Gregory+Arone">Gregory Arone</a>, <a class="existingWikiWord" href="/nlab/show/Michael+Ching">Michael Ching</a>, <em>Operads And Chain Rules For The Calculus Of Functors</em>, <a href="http://www.math.uga.edu/~mching/Work/chain-rule-spaces-final.pdf">preprint</a></p>
 </li>
 
 <li id="AroneMahowald98">
@@ -1075,7 +1087,13 @@ e^{x - 1} \cdot e^{-\frac{(x - 1)^2}{2}} \cdot e^{\frac{(x - 1)^3}{3}} \ldots = 
 <p>On the relation to <a class="existingWikiWord" href="/nlab/show/configuration+space+%28mathematics%29">configuration spaces</a>:</p>
 
 <ul>
-<li>Michael Ching, <em>Calculus of Functors and Configuration Spaces</em> (<a href="https://www3.amherst.edu/~mching/Work/skye.pdf">pdf</a>)</li>
+<li id="Ching05">
+<p><a class="existingWikiWord" href="/nlab/show/Michael+Ching">Michael Ching</a>, <em>Bar constructions for topological operads and the Goodwillie derivatives of the identity</em>, Geom. Topol. 9 (2005) 833-934 (<a href="https://arxiv.org/abs/math/0501429">arXiv:math/0501429</a>)</p>
+</li>
+
+<li id="Ching05b">
+<p><a class="existingWikiWord" href="/nlab/show/Michael+Ching">Michael Ching</a>, <em>Calculus of Functors and Configuration Spaces</em>, Conference on Pure and Applied Topology Isle of Skye, Scotland, 21-25 June, 2005 (<a href="https://www3.amherst.edu/~mching/Work/skye.pdf">pdf</a>)</p>
+</li>
 </ul>
 </body></html>
 
@@ -1083,14 +1101,14 @@ e^{x - 1} \cdot e^{-\frac{(x - 1)^2}{2}} \cdot e^{\frac{(x - 1)^3}{3}} \ldots = 
 
 <div class="revisedby">
   <p>
-  Last revised on September 22, 2018 at 02:40:10.
+  Last revised on October 27, 2018 at 13:34:49.
   See the <a href="https://ncatlab.org/nlab/history/Goodwillie calculus" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Goodwillie+calculus" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Goodwillie+calculus/48" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(48 revisions)</span> | <a href="/nlab/show/diff/Goodwillie+calculus" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Goodwillie+calculus" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Goodwillie+calculus" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Goodwillie+calculus/49" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(49 revisions)</span> | <a href="/nlab/show/diff/Goodwillie+calculus" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Goodwillie+calculus" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Goodwillie calculus/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
