--- a/pages/4118.html
+++ b/pages/4118.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9190/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9190/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -520,27 +520,43 @@ margin-left: 0em;
 <p>The <a class="existingWikiWord" href="/nlab/show/special+linear+group">special linear group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>SL</mi> <mi>n</mi></msub><mo stretchy="false">(</mo><mi>𝔽</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SL_n(\mathbb{F})</annotation></semantics></math> is perfect for any <a class="existingWikiWord" href="/nlab/show/field">field</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝔽</mi></mrow><annotation encoding="application/x-tex">\mathbb{F}</annotation></semantics></math> and any <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>≥</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">n \geq 1</annotation></semantics></math>, except for the cases <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>SL</mi> <mn>2</mn></msub><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mo stretchy="false">(</mo><mn>2</mn><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SL_2(\mathbb{Z}/(2))</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>SL</mi> <mn>2</mn></msub><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mo stretchy="false">(</mo><mn>3</mn><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SL_2(\mathbb{Z}/(3))</annotation></semantics></math>.</p>
 </div>
 
+<p>See for example <a href="http://people.brandeis.edu/~igusa/Math101b/SL.pdf">here</a>, or Lang’s Algebra (<math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mn>3</mn> <mi>rd</mi></msup></mrow><annotation encoding="application/x-tex">3^{rd}</annotation></semantics></math> edition), page (to be looked up).</p>
+
 <div class="num_prop">
 <h6 id="proposition_4">Proposition</h6>
 
 <p>The <a class="existingWikiWord" href="/nlab/show/quotient+group">quotient group</a> of a perfect group is again perfect.</p>
 </div>
 
-<p>This last assertion is easy to see: <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is perfect if it has no nontrivial abelian quotients. If a quotient <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi></mrow><annotation encoding="application/x-tex">H</annotation></semantics></math> had a nontrivial abelian quotient, then so would <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>.</p>
+<p>This last assertion is easy to see: <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is perfect if it has no nontrivial abelian quotients. If a quotient <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi></mrow><annotation encoding="application/x-tex">H</annotation></semantics></math> had a nontrivial abelian quotient, then obviously so would <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>.</p>
+
+<p>Relatedly, we have</p>
+
+<div class="num_prop">
+<h6 id="proposition_5">Proposition</h6>
+
+<p>An arbitrary colimit of perfect groups (as calculated in <a class="existingWikiWord" href="/nlab/show/Grp">Grp</a>, the category of groups) is again perfect.</p>
+</div>
+
+<div class="proof">
+<h6 id="proof">Proof</h6>
+
+<p>The abelianization functor, being a <a class="existingWikiWord" href="/nlab/show/left+adjoint">left adjoint</a>, preserves a <a class="existingWikiWord" href="/nlab/show/colimit">colimit</a> of perfect groups <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>colim</mi> <mi>i</mi></msub><msub><mi>G</mi> <mi>i</mi></msub></mrow><annotation encoding="application/x-tex">colim_i G_i</annotation></semantics></math>, taking it to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>colim</mi> <mi>i</mi></msub><mo stretchy="false">(</mo><msub><mi>G</mi> <mi>i</mi></msub><msup><mo stretchy="false">)</mo> <mi>ab</mi></msup><mo>≅</mo><msub><mo lspace="0em" rspace="thinmathspace">colim</mo> <mi>i</mi></msub><mn>1</mn><mo>≅</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">colim_i (G_i)^{ab} \cong \colim_i 1 \cong 1</annotation></semantics></math> (since an arbitrary colimit of <a class="existingWikiWord" href="/nlab/show/initial+object">initial object</a>s is again initial).</p>
+</div>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October 27, 2018 at 13:45:01.
+  Last revised on October 27, 2018 at 14:22:12.
   See the <a href="https://ncatlab.org/nlab/history/perfect group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/perfect+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/perfect+group/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/perfect+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/perfect+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/perfect+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/perfect+group/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/perfect+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/perfect+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/perfect group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
