--- a/pages/4118.html
+++ b/pages/4118.html
@@ -525,7 +525,7 @@ margin-left: 0em;
 <div class="num_prop">
 <h6 id="proposition_4">Proposition</h6>
 
-<p>The <a class="existingWikiWord" href="/nlab/show/quotient+group">quotient group</a> of a perfect group is again perfect.</p>
+<p>A <a class="existingWikiWord" href="/nlab/show/quotient+group">quotient group</a> of a perfect group is again perfect.</p>
 </div>
 
 <p>This last assertion is easy to see: <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is perfect if it has no nontrivial abelian quotients. If a quotient <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi></mrow><annotation encoding="application/x-tex">H</annotation></semantics></math> had a nontrivial abelian quotient, then obviously so would <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>.</p>
@@ -549,14 +549,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 27, 2018 at 20:47:48.
+  Last revised on October 27, 2018 at 23:24:21.
   See the <a href="https://ncatlab.org/nlab/history/perfect group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/perfect+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/perfect+group/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/perfect+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/perfect+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/perfect+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/perfect+group/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/perfect+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/perfect+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/perfect group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
