--- a/pages/19871.html
+++ b/pages/19871.html
@@ -369,19 +369,17 @@ margin-left: 0em;
 
 <h2 id="preservation_of_substitution">Preservation of substitution</h2>
 
-<p>include <span class="newWikiWord">Initiality Project - Preservation of Substitution - Pi-types<a href="/nlab/new/Initiality+Project+-+Preservation+of+Substitution+-+Pi-types">?</a></span></p>
+<p>include <span class="newWikiWord">Initiality Project - Substitution - Pi-types<a href="/nlab/new/Initiality+Project+-+Substitution+-+Pi-types">?</a></span></p>
 
 <h2 id="totality">Totality</h2>
 
 <p>include <span class="newWikiWord">Initiality Project - Totality - Pi-types<a href="/nlab/new/Initiality+Project+-+Totality+-+Pi-types">?</a></span></p>
 
 <h2 id="the_term_model">The Term Model</h2>
-
-<p>include <span class="newWikiWord">Initiality Project - Term Model - Pi-types<a href="/nlab/new/Initiality+Project+-+Term+Model+-+Pi-types">?</a></span></p>
-
+<p>TODO: Prove that the term model category with families has <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Π</mi></mrow><annotation encoding="application/x-tex">\Pi</annotation></semantics></math>-type structure.</p>
 <h2 id="interpretation_functor">Interpretation functor</h2>
 
-<p>include <span class="newWikiWord">Initiality Project - Interpretation Functor - Pi-types<a href="/nlab/new/Initiality+Project+-+Interpretation+Functor+-+Pi-types">?</a></span></p>
+<p>include <span class="newWikiWord">Initiality Project - Functor - Pi-types<a href="/nlab/new/Initiality+Project+-+Functor+-+Pi-types">?</a></span></p>
 
 <h2 id="uniqueness">Uniqueness</h2>
 
@@ -392,14 +390,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on October 26, 2018 at 16:38:47.
+  Last revised on October 28, 2018 at 01:53:56.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - Pi-types" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project+-+Pi-types" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Initiality+Project+-+Pi-types" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+Pi-types/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Initiality+Project+-+Pi-types" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+Pi-types" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project - Pi-types/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
